@@ -8,6 +8,8 @@ import org.junit.jupiter.api.Test;
 
 import javax.annotation.Resource;
 import java.time.LocalDateTime;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -29,15 +31,15 @@ public class ImGroupMessageMapperTest extends BaseDbUnitTest {
     @Test
     public void testSelectListByMinId_filterByReceiverSnapshot() {
         // 准备：群 10 三条消息，快照分别命中 / 不命中用户 1
-        ImGroupMessageDO visible = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, List.of(1L, 2L));
+        ImGroupMessageDO visible = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, Arrays.asList(1L, 2L));
         mapper.insert(visible);
-        ImGroupMessageDO invisible = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, List.of(2L, 3L));
+        ImGroupMessageDO invisible = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, Arrays.asList(2L, 3L));
         mapper.insert(invisible);
-        ImGroupMessageDO selfSend = buildMessage(10L, 1L, ImMessageStatusEnum.NORMAL, List.of(1L, 2L));
+        ImGroupMessageDO selfSend = buildMessage(10L, 1L, ImMessageStatusEnum.NORMAL, Arrays.asList(1L, 2L));
         mapper.insert(selfSend);
 
         // 调用：用户 1 拉取群 10
-        List<ImGroupMessageDO> result = mapper.selectListByMinId(1L, List.of(10L), 0L, FAR_PAST, 100);
+        List<ImGroupMessageDO> result = mapper.selectListByMinId(1L, Arrays.asList(10L), 0L, FAR_PAST, 100);
 
         // 断言：仅返回快照包含用户 1 的消息
         assertEquals(2, result.size());
@@ -50,10 +52,10 @@ public class ImGroupMessageMapperTest extends BaseDbUnitTest {
         // 准备：快照为 null / 空字符串的老数据，不应被任何用户拉到
         ImGroupMessageDO nullSnapshot = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, null);
         mapper.insert(nullSnapshot);
-        ImGroupMessageDO emptySnapshot = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, List.of());
+        ImGroupMessageDO emptySnapshot = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, Collections.emptyList());
         mapper.insert(emptySnapshot);
 
-        List<ImGroupMessageDO> result = mapper.selectListByMinId(1L, List.of(10L), 0L, FAR_PAST, 100);
+        List<ImGroupMessageDO> result = mapper.selectListByMinId(1L, Arrays.asList(10L), 0L, FAR_PAST, 100);
 
         assertTrue(result.isEmpty());
     }
@@ -61,13 +63,13 @@ public class ImGroupMessageMapperTest extends BaseDbUnitTest {
     @Test
     public void testSelectListByMinId_onlyReturnsGroupsInIdList() {
         // 准备：群 10 + 群 20 各一条，用户 1 都在快照内
-        ImGroupMessageDO msg10 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, List.of(1L, 2L));
+        ImGroupMessageDO msg10 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, Arrays.asList(1L, 2L));
         mapper.insert(msg10);
-        ImGroupMessageDO msg20 = buildMessage(20L, 2L, ImMessageStatusEnum.NORMAL, List.of(1L, 2L));
+        ImGroupMessageDO msg20 = buildMessage(20L, 2L, ImMessageStatusEnum.NORMAL, Arrays.asList(1L, 2L));
         mapper.insert(msg20);
 
         // 调用：候选群只含群 10
-        List<ImGroupMessageDO> result = mapper.selectListByMinId(1L, List.of(10L), 0L, FAR_PAST, 100);
+        List<ImGroupMessageDO> result = mapper.selectListByMinId(1L, Arrays.asList(10L), 0L, FAR_PAST, 100);
 
         assertEquals(1, result.size());
         assertEquals(msg10.getId(), result.get(0).getId());
@@ -76,12 +78,12 @@ public class ImGroupMessageMapperTest extends BaseDbUnitTest {
     @Test
     public void testSelectListByMinId_includesRecall() {
         // 准备：撤回消息也要返回，由客户端按 status 渲染「此消息已撤回」占位
-        ImGroupMessageDO normal = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, List.of(1L));
+        ImGroupMessageDO normal = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, Arrays.asList(1L));
         mapper.insert(normal);
-        ImGroupMessageDO recalled = buildMessage(10L, 2L, ImMessageStatusEnum.RECALL, List.of(1L));
+        ImGroupMessageDO recalled = buildMessage(10L, 2L, ImMessageStatusEnum.RECALL, Arrays.asList(1L));
         mapper.insert(recalled);
 
-        List<ImGroupMessageDO> result = mapper.selectListByMinId(1L, List.of(10L), 0L, FAR_PAST, 100);
+        List<ImGroupMessageDO> result = mapper.selectListByMinId(1L, Arrays.asList(10L), 0L, FAR_PAST, 100);
 
         assertEquals(2, result.size());
     }
@@ -89,14 +91,14 @@ public class ImGroupMessageMapperTest extends BaseDbUnitTest {
     @Test
     public void testSelectListByMinId_sendTimeWindow() {
         // 准备：一条在窗口内，一条在窗口外
-        ImGroupMessageDO inWindow = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, List.of(1L));
+        ImGroupMessageDO inWindow = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, Arrays.asList(1L));
         inWindow.setSendTime(LocalDateTime.now().minusDays(1));
         mapper.insert(inWindow);
-        ImGroupMessageDO outWindow = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, List.of(1L));
+        ImGroupMessageDO outWindow = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, Arrays.asList(1L));
         outWindow.setSendTime(LocalDateTime.now().minusDays(40));
         mapper.insert(outWindow);
 
-        List<ImGroupMessageDO> result = mapper.selectListByMinId(1L, List.of(10L), 0L,
+        List<ImGroupMessageDO> result = mapper.selectListByMinId(1L, Arrays.asList(10L), 0L,
                 LocalDateTime.now().minusDays(30), 100);
 
         assertEquals(1, result.size());
@@ -106,15 +108,15 @@ public class ImGroupMessageMapperTest extends BaseDbUnitTest {
     @Test
     public void testSelectListByMinId_sortAscLimit() {
         // 准备：插入 3 条可见消息
-        ImGroupMessageDO m1 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, List.of(1L));
+        ImGroupMessageDO m1 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, Arrays.asList(1L));
         mapper.insert(m1);
-        ImGroupMessageDO m2 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, List.of(1L));
+        ImGroupMessageDO m2 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, Arrays.asList(1L));
         mapper.insert(m2);
-        ImGroupMessageDO m3 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, List.of(1L));
+        ImGroupMessageDO m3 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, Arrays.asList(1L));
         mapper.insert(m3);
 
         // 调用：size=2，返回 id 最小的 2 条
-        List<ImGroupMessageDO> result = mapper.selectListByMinId(1L, List.of(10L), 0L, FAR_PAST, 2);
+        List<ImGroupMessageDO> result = mapper.selectListByMinId(1L, Arrays.asList(10L), 0L, FAR_PAST, 2);
 
         assertEquals(2, result.size());
         assertTrue(result.get(0).getId() < result.get(1).getId());
@@ -125,12 +127,12 @@ public class ImGroupMessageMapperTest extends BaseDbUnitTest {
     @Test
     public void testSelectListByMinId_minIdExclusive() {
         // 准备：游标之前的消息不返回
-        ImGroupMessageDO m1 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, List.of(1L));
+        ImGroupMessageDO m1 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, Arrays.asList(1L));
         mapper.insert(m1);
-        ImGroupMessageDO m2 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, List.of(1L));
+        ImGroupMessageDO m2 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, Arrays.asList(1L));
         mapper.insert(m2);
 
-        List<ImGroupMessageDO> result = mapper.selectListByMinId(1L, List.of(10L), m1.getId(), FAR_PAST, 100);
+        List<ImGroupMessageDO> result = mapper.selectListByMinId(1L, Arrays.asList(10L), m1.getId(), FAR_PAST, 100);
 
         assertEquals(1, result.size());
         assertEquals(m2.getId(), result.get(0).getId());
@@ -141,14 +143,14 @@ public class ImGroupMessageMapperTest extends BaseDbUnitTest {
     @Test
     public void testSelectHistoryListByUser_filterByReceiverSnapshot() {
         // 准备：群 10 三条，用户 1 在前两条快照内、第三条定向给别人
-        ImGroupMessageDO m1 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, List.of(1L, 2L));
+        ImGroupMessageDO m1 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, Arrays.asList(1L, 2L));
         mapper.insert(m1);
-        ImGroupMessageDO m2 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, List.of(1L, 2L));
+        ImGroupMessageDO m2 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, Arrays.asList(1L, 2L));
         mapper.insert(m2);
-        ImGroupMessageDO directedOther = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, List.of(2L, 3L));
+        ImGroupMessageDO directedOther = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, Arrays.asList(2L, 3L));
         mapper.insert(directedOther);
         // 别的群
-        ImGroupMessageDO other = buildMessage(20L, 2L, ImMessageStatusEnum.NORMAL, List.of(1L));
+        ImGroupMessageDO other = buildMessage(20L, 2L, ImMessageStatusEnum.NORMAL, Arrays.asList(1L));
         mapper.insert(other);
 
         List<ImGroupMessageDO> result = mapper.selectHistoryListByUser(1L, 10L, null, 100);
@@ -161,11 +163,11 @@ public class ImGroupMessageMapperTest extends BaseDbUnitTest {
 
     @Test
     public void testSelectHistoryListByUser_maxIdCursor() {
-        ImGroupMessageDO m1 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, List.of(1L));
+        ImGroupMessageDO m1 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, Arrays.asList(1L));
         mapper.insert(m1);
-        ImGroupMessageDO m2 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, List.of(1L));
+        ImGroupMessageDO m2 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, Arrays.asList(1L));
         mapper.insert(m2);
-        ImGroupMessageDO m3 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, List.of(1L));
+        ImGroupMessageDO m3 = buildMessage(10L, 2L, ImMessageStatusEnum.NORMAL, Arrays.asList(1L));
         mapper.insert(m3);
 
         List<ImGroupMessageDO> result = mapper.selectHistoryListByUser(1L, 10L, m3.getId(), 100);
